<resources>
    <string name="app_name">Venture</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  LoginSignupFragment  -->
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="loginSignupImage">LoginSignupImage</string>
    <string name="loginSignupTitle">Adventure awaits</string>
    <string name="loginSignupSubtitle">Please login or signup to access this feature.</string>

    <!--  SignupFragment  -->
    <string name="signupImage">SignupImage</string>
    <string name="signupSubtitle">Create an account to \nsave your progress.</string>
    <string name="signupName">Name</string>
    <string name="signupEmail">Email</string>
    <string name="signupPassword">Password</string>
    <string name="requiredField">* This field is required</string>
    <string name="invalidEmail">* Enter a valid email</string>

    <!--  LoginFragment  -->
    <string name="loginSubtitle">Welcome back.\nLog in and let\'s get going.</string>
    <string name="title_activity_maps_trial">Map</string>

    <!-- ExploreMapFragment -->
    <string name="geolocateError">Unable to get current location</string>
    <string name="geolocateSuccess">Location enabled</string>
    <string name="permissionReq">Please grant permission to use your location</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="default_bio">You haven\'t entered the bio yet. Set it by editing profile from the top.</string>

    <!-- ExploreListFragment -->
    <string name="noEventsNearby">There are no events nearby!</string>

    <!-- PlanFragment -->
    <string name="noEventsCreated">You have not created any events yet</string>
    <string name="noEventsJoined">You have not joined any events</string>

    <!-- HistoryFragment -->
    <string name="noEventsHistory">You did not participate in any events in the past</string>

    <!-- EventFragment -->
    <string name="organizedBy">Organized By</string>
    <string name="dialog_select_photo">SelectPhotoDialog</string>
    <string name="edit_bio">Write your bio here...</string>
    <string name="save_changes_button">Save Changes</string>
    <string name="edit_name">Write your Full Name</string>
    <string name="add_event_photo">Add Photo</string>
    <string name="event_photo">Event Photo</string>
    <string name="add_meeting_point">Add Meeting Point</string>
    <string name="change_photo">Change Photo</string>
    <string name="add_event_button">Add Event</string>
    <string name="event_time_title">Event Time</string>
    <string name="event_date_title">Event Date</string>
    <string name="event_description_title">Event Description</string>
    <string name="event_title">Event Title</string>
    <string name="city_state">Search by City or State</string>

</resources>
