<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Fragments.login.LoginFragment">

    <ImageView
        android:id="@+id/loginSignupImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/signupImage"
        android:src="@drawable/compasslogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/loginSubtitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signupEmail"
        android:inputType="textWebEmailAddress" />

    <TextView
        android:id="@+id/invalidEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalidEmail"
        android:textColor="@color/red"
        android:visibility="gone" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signupPassword"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/invalidPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requiredField"
        android:textColor="@color/red"
        android:visibility="gone" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@color/white" />

</LinearLayout>